<?xml version="1.0"?>
<package format="3">
  <name>arduino_motor</name>
  <version>0.0.1</version>
  <description>ROS 2 package to control DC motor with Arduino BTS7960 driver</description>
  <maintainer email="your@email.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

